# pgrass-server

./: .gitignore  Dockerfile  Jenkinsfile  docker-compose.yml  entrypoint.sh  gunicorn_conf.py  pyproject.toml  settings.toml  start.sh
app/: config.py  db.py  errors.py  functions.py  routers.py  server.py
app/api/: auth.py  collections.py  dataset.py  feature.py  timeserie.py  upload.py  user.py
app/api/stac/: sentinel2.py
app/fuctions/: sentinel2.py
app/model/: auth.py  models.py
app/utils/: auth.py  exceptions.py
client/: angular.json  karma.conf.js  package-lock.json  package.json
client/src/: index.html  polyfills.ts
client/src/app/: app.module.ts  app.resolvers.ts  app.routing.ts
client/src/app/core/auth/: auth.service.ts
client/src/app/layout/: layout.component.html
client/src/app/mock-api/apps/scrumboard/: data.ts
client/src/app/mock-api/common/navigation/: data.ts
client/src/app/modules/admin/collections/: collections.component.html  collections.component.ts  collections.module.ts  collections.resolver.ts  collections.service.ts  collections.types.ts  features.service.ts
client/src/app/modules/admin/main/: main.component.ts  (+3 more)
client/src/app/shared/: shared.module.ts
client/src/app/shared/map/: ol-maps.module.ts
client/src/assets/i18n/: pt.json
client/src/environments/: environment.prod.ts  environment.ts
client/src/styles/: _reponsive.scss  styles.scss
dev/: .gitignore  docker-compose.yml  entrypoint.sh  env-example  install.sh
templates/: error.html
templates/css/: demo.css  main.css
templates/js/: main.js  modernizr.js
(+21 files in other folders)
