[tool.poetry]
name = "PoTSA"
version = "0.1.0"
description = ""
authors = ["Jairo Matos da Rocha <jairo@discente.ufg.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
dynaconf = "^3.1.8"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
geopandas = "^0.10.2"
rasterio = "1.3a4"
geojson = "^2.5.0"
pystac-client = "0.3.2"
loguru = "^0.6.0"
motor = {extras = ["srv"], version = "^3.0.0"}
pydantic = {extras = ["email"], version = "^1.9.1"}
python-multipart = "^0.0.5"
pytz = "^2022.1"



[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
web-pdb = "^1.5.7"
blue = "^0.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
